--- a/A4on.dproj
+++ b/A4on.dproj
@@ -63,10 +63,10 @@
         <Manifest_File>$(BDS)\bin\default_app.manifest</Manifest_File>
         <VerInfo_Build>780</VerInfo_Build>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
-        <VerInfo_Keys>CompanyName=A4on.TV;FileDescription=Billing for TV/Internet operators;FileVersion=25.10.0.780;LegalCopyright=Copyright (C) 2005-2025, Shumko Dmitry;ProductName=A4on.TV;ProductVersion=25.0;OriginalFilename=a4on.exe</VerInfo_Keys>
+        <VerInfo_Keys>CompanyName=A4on.TV;FileDescription=Billing for TV/Internet operators;FileVersion=25.11.0.780;LegalCopyright=Copyright (C) 2005-2025, Shumko Dmitry;ProductName=A4on.TV;ProductVersion=25.0;OriginalFilename=a4on.exe</VerInfo_Keys>
         <VerInfo_Locale>1049</VerInfo_Locale>
         <VerInfo_MajorVer>25</VerInfo_MajorVer>
-        <VerInfo_MinorVer>10</VerInfo_MinorVer>
+        <VerInfo_MinorVer>11</VerInfo_MinorVer>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
         <DCC_Namespace>Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
@@ -79,8 +79,9 @@
         <DCC_SymbolReferenceInfo>0</DCC_SymbolReferenceInfo>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
-        <VerInfo_Build>994</VerInfo_Build>
-        <VerInfo_Keys>CompanyName=A4on.TV;FileDescription=Billing for TV/Internet operators;FileVersion=25.10.0.994;LegalCopyright=Copyright (C) 2005-2025, Shumko Dmitry;ProductName=A4on.TV;ProductVersion=25.0;OriginalFilename=a4on.exe</VerInfo_Keys>
+        <VerInfo_MinorVer>11</VerInfo_MinorVer>
+        <VerInfo_Build>998</VerInfo_Build>
+        <VerInfo_Keys>CompanyName=A4on.TV;FileDescription=Billing for TV/Internet operators;FileVersion=25.11.0.998;LegalCopyright=Copyright (C) 2005-2025, Shumko Dmitry;ProductName=A4on.TV;ProductVersion=25.0;OriginalFilename=a4on.exe</VerInfo_Keys>
         <DCC_ImportedDataReferences>false</DCC_ImportedDataReferences>
         <DCC_AdditionalSwitches>-x-fvs -x-fpr -x-orc</DCC_AdditionalSwitches>
         <DCC_MapFile>3</DCC_MapFile>
@@ -94,8 +95,8 @@
         <DCC_UNIT_PLATFORM>true</DCC_UNIT_PLATFORM>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2_Win32)'!=''">
-        <VerInfo_Keys>CompanyName=A4on.TV;FileDescription=Billing for TV/Internet operators;FileVersion=25.10.0.815;LegalCopyright=Copyright (C) 2005-2025, Shumko Dmitry;ProductName=A4on.TV;ProductVersion=25.0;OriginalFilename=a4on.exe</VerInfo_Keys>
-        <VerInfo_Build>815</VerInfo_Build>
+        <VerInfo_Keys>CompanyName=A4on.TV;FileDescription=Billing for TV/Internet operators;FileVersion=25.11.0.817;LegalCopyright=Copyright (C) 2005-2025, Shumko Dmitry;ProductName=A4on.TV;ProductVersion=25.0;OriginalFilename=a4on.exe</VerInfo_Keys>
+        <VerInfo_Build>817</VerInfo_Build>
         <DCC_AssertionsAtRuntime>true</DCC_AssertionsAtRuntime>
         <DCC_DebugDCUs>true</DCC_DebugDCUs>
         <DCC_DebugInfoInExe>true</DCC_DebugInfoInExe>
@@ -1056,6 +1057,10 @@
         </DCCReference>
         <DCCReference Include="forms\nodes\NodeLayoutFactForma.pas">
             <Form>NodeLayoutFactForm</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="forms\Dict\TimeSeriesForma.pas">
+            <Form>TimeSeriesForm</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <BuildConfiguration Include="Debug">
